--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -146,7 +146,7 @@
                                         <a class="dropdown-item" href="team.html">Team</a>
                                         <a class="dropdown-item" href="contact.html">Contact</a>
                                         <a class="dropdown-item" href="special events.html">events</a>
-                                        <a class="dropdown-item" href="terms-and-conditions.html">Terms and conditions</a>
+                                        <a class="dropdown-item" href="terms-and-conditions.html">events</a>
 
                                     </div>
                                 </li>
