--- a/order_online.html
+++ b/order_online.html
@@ -130,7 +130,6 @@
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
           <a class="dropdown-item" href="special events.html">Events</a>
-          <a class="dropdown-item" href="terms-and-conditions.html">Terms and conditions</a>
 
           <!-- Add more items here as needed -->
         </div>
@@ -232,7 +231,7 @@
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> this is a school project 
+          &copy; <span id="displayYear"></span> This is a school project 
         </p>
       </div>
     </div>
