--- a/team.html
+++ b/team.html
@@ -97,7 +97,6 @@
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
           <a class="dropdown-item" href="special events.html">Events</a>
-          <a class="dropdown-item" href="terms-and-conditions.html">Terms and conditions</a>
           <!-- Add more items here as needed -->
         </div>
       </li>
@@ -153,10 +152,10 @@ Team manger
               </div>
               <div class="detail-box">
                 <h5>
-                 colton
+                 colton Abel
                 </h5>
                 <p>
-sjhqb                </p>
+Developer</p>
                 <div class="options">
                   <h6>
                   </h6>
@@ -171,11 +170,11 @@ sjhqb                </p>
           <div class="box">
             <div>
               <div class="images">
-                <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                <img src="images/photo-2275370.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Amr Daraghmeh
+                  Coneer snyder
                 </h5>
                 <p>
                   Develeber 
@@ -261,7 +260,7 @@ sjhqb                </p>
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> this is a school project 
+          &copy; <span id="displayYear"></span> This is a school project 
         </p>
       </div>
     </div>
