price changes for items

--- a/menu.html
+++ b/menu.html
@@ -350,7 +350,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $10.49
+                      $8.49
                     </h6>
                         <g>
                           <g>
@@ -722,7 +722,7 @@
               </p>
                  <div class="options">
                     <h6>
-                      $50.49 <!-- Replace with the actual price -->
+                      $32.99 <!-- Replace with the actual price -->
                     </h6>
                     </a>
                   </div>
@@ -745,7 +745,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $8.99
+                      $7.99
                     </h6>
 
                   </div>
@@ -770,7 +770,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $9.49
+                      $7.99
                     </h6>
                     
                   </div>
@@ -793,7 +793,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $8.99
+                      $6.99
                     </h6>
 
                   </div>
@@ -839,7 +839,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $6.95
+                      $6.99
                     </h6>
                   </div>
                 </div>
@@ -879,7 +879,7 @@
                           Pina Colata
                         </h5>
                         <p>
-                        
+                          A tall mixed drink of cream of coconut, pineapple juice, and ice, frapped in a blender
                         </p>
                         <div class="options">
                             <h6>
