--- a/team.html
+++ b/team.html
@@ -152,7 +152,7 @@ Team manger
               </div>
               <div class="detail-box">
                 <h5>
-                 colton Abel
+                 Colton Abel
                 </h5>
                 <p>
 Developer</p>
@@ -170,14 +170,14 @@ Developer</p>
           <div class="box">
             <div>
               <div class="images">
-                <img src="images/photo-2275370.png" alt="">
+                <img src="" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Coneer snyder
+                  Conner Snyder
                 </h5>
                 <p>
-                  Develeber 
+                  Developer
                 </p>
                 <div class="options">
                   <h6>
