--- a/special events.html
+++ b/special events.html
@@ -168,8 +168,8 @@
                     <span>🌐</span>
                 </div>
                 <div class="event-details">
-                    <h3>Public Event 1</h3>
-                    <p>Details about the public event.</p>
+                    <h3>Karaoke event</h3>
+                    <p>March 17 2024 6:30 - 9:00 </p>
                 </div>
             </div>
 
@@ -179,8 +179,8 @@
                     <span>🔒</span>
                 </div>
                 <div class="event-details">
-                    <h3>Private Event 2</h3>
-                    <p>Details about the private event.</p>
+                    <h3>Graduation party</h3>
+                    <p>May 27 2024 2:35PM - 5:35PM</p>
                 </div>
             </div>
 
@@ -190,8 +190,8 @@
                     <span>⭐</span>
                 </div>
                 <div class="event-details">
-                    <h3>Special Event 3</h3>
-                    <p>Details about the special event.</p>
+                    <h3> Birthday event</h3>
+                    <p>April 15 2024 3PM 5:30PM</p>
                 </div>
             </div>
         </div>
