--- a/menu.html
+++ b/menu.html
@@ -595,7 +595,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Mac & cheese
+                    Mac & Cheese
                   </h5>
                   <p>
                     Tender elbow macaroni enveloped in a luscious, velvety cheese sauce, crowned with succulent pulled pork for a decadent and satisfying fusion of comfort and indulgence.
