--- a/team.html
+++ b/team.html
@@ -148,7 +148,7 @@ Team manger
           <div class="box">
             <div>
               <div class="images">
-                <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                <img src="" alt="">
               </div>
               <div class="detail-box">
                 <h5>
