--- a/index.html
+++ b/index.html
@@ -593,10 +593,11 @@
               <div>
                 <input type="date" class="form-control">
               </div>
-              <div class="btn_box">
-                <button>
+              <div class="btn-box">
+                <a href="book.html">
                   Book Now
-                </button>
+              
+                </a>
               </div>
             </form>
           </div>
