--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   Classic Combo Deal
                 </h5>
                 <h6>
-                  <span> $16.99
+                  <span> $21.99
                     <h6>
                   </span> Get two Brisket burgers ( beef, chicken, or veggie) with a side of your choice and drinks
                 </h6>
@@ -593,11 +593,11 @@
               <div>
                 <input type="date" class="form-control">
               </div>
-              <div class="btn-box">
-                <a href="book.html">
-                  Book Now
-              
-                </a>
+              <div class="btn_box">
+                
+                    <a href="book.html">
+                      <button type="button" onclick="window.location.href='book.html';">Book Now</button>
+                    </a>
               </div>
             </form>
           </div>
