--- a/index.html
+++ b/index.html
@@ -42,18 +42,17 @@
 </head>
 
 <body>
-
   <div class="hero_area">
     <div class="bg-box">
       <img src="images/hero-bg.jpg" alt="">
     </div>
-    <!-- header section strats -->
+    <!-- header section starts -->
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Game Day Grill
+              <img src="path-to-your-image.jpg" alt="Logo">
             </span>
           </a>
 
