--- a/team.html
+++ b/team.html
@@ -189,6 +189,28 @@ Team manger
           </div>
         </div>
         
+        <div class="col-sm-6 col-lg-4 all appetizers">
+          <div class="box">
+            <div>
+              <div class="images">
+                <img src="" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                 Colten Abel
+                </h5>
+                <p>
+                  Developer
+                </p>
+                <div class="options">
+                  <h6>
+                  
+                  </h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </section>
 
