--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
   <!-- End of HubSpot Embed Code -->
-
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-74a4db7e-1a5a-47e6-9975-16ac0b58cc17" data-elfsight-app-lazy></div>
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
