--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
+      <img src="images/gdg1.png" alt="">
     </div>
     <!-- header section starts -->
     <header class="header_section">
