--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/gdg1.png" alt="">
+      <img src="images/hero-bg.jpg" alt="">
     </div>
     <!-- header section starts -->
     <header class="header_section">
@@ -53,7 +53,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              <img src="path-to-your-image.jpg" alt="Logo">
+              <img src="" alt="Logo">
             </span>
           </a>
 
