the logo inserted

--- a/about.html
+++ b/about.html
@@ -34,7 +34,6 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
-
   <style>
     /* Add custom styles for the header background */
     .header_section {
@@ -46,6 +45,20 @@
     body {
       background-color: #fff; /* Change this to your desired main content background color */
     }
+
+    /* Add custom styles for the navbar and logo */
+    .navbar {
+      padding: 10px; /* Adjust the padding as needed */
+    }
+
+    .navbar-brand img {
+      max-height: 100%;
+      vertical-align: middle;
+    }
+
+    .navbar-brand {
+      margin-left: -250px;
+    }
   </style>
 </head>
 
@@ -54,16 +67,13 @@
     <div class="bg-box">
       <img src="images/hero-bg.jpg" alt="">
     </div>
-  <!-- header section starts -->
-  <header class="header_section">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg custom_nav-container ">
-        <a class="navbar-brand" href="index.html">
-          <span>
-            Game Day Grill
-          </span>
-        </a>
-
+    <!-- header section starts -->
+    <header class="header_section">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg custom_nav-container ">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/gdg22a__3_-removebg-preview.png" alt="Logo">
+          </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""> </span>
