--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
   <link href="css/responsive.css" rel="stylesheet" />
   <script src="store.js"></script>
 
-</head>
 
+<style>
+  .navbar-brand img {
+    margin-left: -250px;
+  }
+</style>
+</head>
 <body>
   <div class="hero_area">
     <div class="bg-box">
@@ -53,7 +58,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              <img src="" alt="Logo">
+              <img src="images/gdg22a__3_-removebg-preview.png" alt="Logo">
             </span>
           </a>
 
