--- a/contact.html
+++ b/contact.html
@@ -77,12 +77,13 @@
       <img src="images/hero-bg.jpg" alt="">
     </div>
     <!-- header section starts -->
+    <!-- header section starts -->
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Game Day Grill
+              <img src="images/gdg22a__3_-removebg-preview.png" alt="Logo">
             </span>
           </a>
 
