--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 
 
 
-
 </style>
 </head>
 <body>
@@ -56,7 +55,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              <img src="images/gdg22a__3_-removebg-preview.png" alt="Logo">
+              <img src="images/theednf.png" alt="Logo">
             </span>
           </a>
 
