--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              <img src="images/gdg1.png" alt="Logo">
+              <img src="images/theednf.png" alt="Logo">
             </span>
           </a>
 
