--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/gdg22a__3_-removebg-preview.png" alt="Logo">
+            <img src="images/Main_logo.png" alt="Logo">
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
