--- a/menu.html
+++ b/menu.html
@@ -60,7 +60,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              <img src="images/gdg22a__3_-removebg-preview.png" alt="Logo">
+              <img src="images/Main_logo.png" alt="Logo">
             </span>
           </a>
 
