--- a/about.html
+++ b/about.html
@@ -34,93 +34,92 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+
   <style>
     /* Add custom styles for the header background */
     .header_section {
-      background-color: #333; /* Change this to your desired header background color */
+      background-color: transparent; /* Set background color to transparent */
       color: #fff; /* Change this to your desired text color for the header */
+    }
+
+    /* Set background image using the specified img tag */
+    .hero_area {
+      background: url('images/hero-bg.jpg') no-repeat center center fixed;
+      background-size: cover;
+      height: 100vh;
+      display: flex;
+      align-items: center;
     }
 
     /* Add custom styles for the main content background */
     body {
       background-color: #fff; /* Change this to your desired main content background color */
+      margin: 0; /* Remove default margin to ensure full-page background image */
     }
-
-
-
-    .navbar-brand img {
-      max-height: 100%;
-      vertical-align: middle;
-    }
-
-
   </style>
 </head>
 
 <body class="sub_page">
   <div class="hero_area">
-    <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
-    </div>
     <!-- header section starts -->
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/Main_logo.png" alt="Logo">
+            <span>
+              <img src="images/Main_logo.png" alt="Logo">
+            </span>
           </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class=""> </span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="menu.html">Menu</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="book.html">Book Table</a>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                  More
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
-                  <a class="dropdown-item" href="team.html">Team</a>
-                  <a class="dropdown-item" href="contact.html">Contact</a>
-                  <a class="dropdown-item" href="special events.html">Events</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class=""> </span>
+          </button>
 
-
-                  <!-- Add more items here as needed -->
-                </div>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home </a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="menu.html">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="book.html">Book Table</a>
+                <!-- More Option with Dropdown -->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    More
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
+                    <a class="dropdown-item" href="team.html">Team</a>
+                    <a class="dropdown-item" href="contact.html">Contact</a>
+                    <a class="dropdown-item" href="special events.html">Events</a>
+                    <!-- Add more items here as needed -->
+                  </div>
+                </li>
             </ul>
-          <div class="user_option">
-            <a href="order_online.html" class="order_online">
-              Order Online
-            </a>
+            <div class="user_option">
+              <a href="order_online.html" class="order_online">
+                Order Online
+              </a>
+            </div>
           </div>
-        </div>
-      </nav>
-    </div>
-  </header>
+        </nav>
+      </div>
+    </header>
     <!-- end header section -->
   </div>
 
   <!-- about section -->
-
   <section class="about_section layout_padding">
-    <div class="container  ">
-
+    <div class="container">
       <div class="row">
-        <div class="col-md-6 ">
+        <div class="col-md-6">
           <div class="img-box">
             <img src="images/about-img.png" alt="">
           </div>
@@ -135,16 +134,14 @@
             <p>
               Game Day Grill is a vibrant culinary destination that embodies the perfect fusion of sports, food, and community. Located in the heart of Fairfield, this restaurant is where the thrill of game day meets exceptional dining. A true haven for sports enthusiasts, it offers a sensory delight, with big-screen TVs broadcasting live games, the jubilant cheers of fellow fans, and a menu that caters to all tastes. From mouthwatering burgers to gourmet sandwiches and fresh salads, Game Day Grill ensures that every bite is a culinary triumph. Whether you're a sports aficionado seeking the excitement of the game or a food lover in search of delectable dishes in a spirited atmosphere, Game Day Grill promises an unforgettable experience where camaraderie and cuisine unite.
             </p>
-            
-            </a>
           </div>
         </div>
       </div>
     </div>
   </section>
-
   <!-- end about section -->
 
+  
   <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
@@ -155,9 +152,6 @@
               Contact Us
             </h4>
             <div class="contact_link_box">
-
-                </span>
-              </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
@@ -179,7 +173,6 @@
               Game Day Grill
             </a>
             <p>
-              
             </p>
             <div class="footer_social">
               <a href="">
@@ -214,18 +207,18 @@
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> This is a school project 
+          &copy; <span id="displayYear"></span> This is a school project
         </p>
       </div>
     </div>
   </footer>
   <!-- footer section -->
 
-
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
   <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
   </script>
   <!-- bootstrap js -->
   <script src="js/bootstrap.js"></script>
