--- a/order_online.html
+++ b/order_online.html
@@ -98,9 +98,10 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            Game Day Grill
+            <img src="images/Main_logo.png" alt="Logo">
           </span>
         </a>
+
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
