--- a/special events.html
+++ b/special events.html
@@ -114,8 +114,10 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              <img src="images/gdg22a__3_-removebg-preview.png" alt="Logo">
+              <img src="images/Main_logo.png" alt="Logo">
             </span>
+          </a>
+
           </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
