logo and started in the about us oage

--- a/team.html
+++ b/team.html
@@ -244,8 +244,9 @@ Team manger
         </div>
         <div class="col-md-4 footer-col">
           <div class="footer_detail">
-            <a href="" class="footer-logo">
-              Game Day Grill
+            <a href="#" class="footer-logo">
+              <!-- Replace the placeholder below with your logo image path -->
+              <img src="images/Main_logo.png" alt="Game Day Grill Logo">
             </a>
             <p>
               
