--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
   <!-- End of HubSpot Embed Code -->
-
+<!--for the theams page only -->
+<link rel="stylesheet" type="text/css" href="css/styleforteams.css"
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
@@ -38,29 +39,26 @@
   <style>
     /* Add custom styles for the header background */
     .header_section {
-      background-color: transparent; /* Set background color to transparent */
+      background-color: #333; /* Change this to your desired header background color */
       color: #fff; /* Change this to your desired text color for the header */
-    }
-
-    /* Set background image using the specified img tag */
-    .hero_area {
-      background: url('images/hero-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-      height: 100vh;
-      display: flex;
-      align-items: center;
     }
 
     /* Add custom styles for the main content background */
     body {
       background-color: #fff; /* Change this to your desired main content background color */
-      margin: 0; /* Remove default margin to ensure full-page background image */
     }
   </style>
 </head>
 
 <body class="sub_page">
+
+ <!-- header section starts -->
+
+ <body class="sub_page">
   <div class="hero_area">
+    <div class="bg-box">
+      <img src="images/hero-bg.jpg" alt="">
+    </div>
     <!-- header section starts -->
     <header class="header_section">
       <div class="container">
@@ -71,78 +69,61 @@
             </span>
           </a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
-          </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class=""> </span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home </a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="book.html">Book Table</a>
-                <!-- More Option with Dropdown -->
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    More
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
-                    <a class="dropdown-item" href="team.html">Team</a>
-                    <a class="dropdown-item" href="contact.html">Contact</a>
-                    <a class="dropdown-item" href="special events.html">Events</a>
-                    <!-- Add more items here as needed -->
-                  </div>
-                </li>
-            </ul>
-            <div class="user_option">
-              <a href="order_online.html" class="order_online">
-                Order Online
-              </a>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
-  </div>
-
-  <!-- about section -->
-  <section class="about_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/about-img.png" alt="">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">Menu</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="book.html">Book Table</a>
+             <!-- More Option with Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+          More
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
+          <a class="dropdown-item" href="team.html">Team</a>
+          <a class="dropdown-item" href="contact.html">Contact</a>
+          <a class="dropdown-item" href="special events.html">Events</a>
+          <!-- Add more items here as needed -->
+        </div>
+      </li>
+    </ul>
+          <div class="user_option">
+            <a href="order_online.html" class="order_online">
+              Order Online
+            </a>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                We Are Game Day Grill!
-              </h2>
-            </div>
-            <p>
-              Game Day Grill is a vibrant culinary destination that embodies the perfect fusion of sports, food, and community. Located in the heart of Fairfield, this restaurant is where the thrill of game day meets exceptional dining. A true haven for sports enthusiasts, it offers a sensory delight, with big-screen TVs broadcasting live games, the jubilant cheers of fellow fans, and a menu that caters to all tastes. From mouthwatering burgers to gourmet sandwiches and fresh salads, Game Day Grill ensures that every bite is a culinary triumph. Whether you're a sports aficionado seeking the excitement of the game or a food lover in search of delectable dishes in a spirited atmosphere, Game Day Grill promises an unforgettable experience where camaraderie and cuisine unite.
-            </p>
-          </div>
-        </div>
-      </div>
+      </nav>
     </div>
-  </section>
-  <!-- end about section -->
+  </header>
+    <!-- end header section -->
 
-  
-  <!-- footer section -->
+
+
+
+
+
+
+
+
+
+
+
+     <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
       <div class="row">
@@ -152,6 +133,9 @@
               Contact Us
             </h4>
             <div class="contact_link_box">
+
+                </span>
+              </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
@@ -169,10 +153,12 @@
         </div>
         <div class="col-md-4 footer-col">
           <div class="footer_detail">
-            <a href="" class="footer-logo">
-              Game Day Grill
+            <a href="#" class="footer-logo">
+              <!-- Replace the placeholder below with your logo image path -->
+              <img src="images/Main_logo.png" alt="Game Day Grill Logo">
             </a>
             <p>
+              
             </p>
             <div class="footer_social">
               <a href="">
@@ -207,35 +193,31 @@
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> This is a school project
+          &copy; <span id="displayYear"></span> This is a school project 
         </p>
       </div>
     </div>
   </footer>
-  <!-- footer section -->
-
-  <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
-  <!-- owl slider -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <!-- isotope js -->
-  <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
-  <!-- nice select -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
-  <!-- custom js -->
-  <script src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
-
-</body>
-
-</html>
+   <!-- jQery -->
+   <script src="js/jquery-3.4.1.min.js"></script>
+   <!-- popper js -->
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+   </script>
+   <!-- bootstrap js -->
+   <script src="js/bootstrap.js"></script>
+   <!-- owl slider -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+   </script>
+   <!-- isotope js -->
+   <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+   <!-- nice select -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+   <!-- custom js -->
+   <script src="js/custom.js"></script>
+   <!-- Google Map -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
+   </script>
+   <!-- End Google Map -->
+ 
+ </body>
+ 
