--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,18 @@
 
   <title> Game Day Grill </title>
 
- 
+  <!-- HubSpot Embed Code -->
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
+  <!-- End of HubSpot Embed Code -->
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <!-- nice select  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
-    integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ=="
-    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
 
@@ -34,7 +34,6 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
-  <script src="store.js"></script>
 
   <style>
     /* Add custom styles for the header background */
@@ -47,36 +46,14 @@
     body {
       background-color: #fff; /* Change this to your desired main content background color */
     }
-
-    /* Add styles for the contact form */
-    .contact_form {
-      margin-top: 50px;
-    }
-
-    .contact_form input,
-    .contact_form textarea {
-      width: 100%;
-      margin-bottom: 20px;
-      padding: 10px;
-    }
-
-    .contact_form button {
-      background-color: #333;
-      color: #fff;
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
-    }
   </style>
 </head>
 
-<body>
-
+<body class="sub_page">
   <div class="hero_area">
     <div class="bg-box">
       <img src="images/hero-bg.jpg" alt="">
     </div>
-    <!-- header section starts -->
     <!-- header section starts -->
     <header class="header_section">
       <div class="container">
@@ -87,26 +64,24 @@
             </span>
           </a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
-          </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class=""> </span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="book.html">Book Table</a>
-              </li>
-              <!-- More Option with Dropdown -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="book.html">Book Table</a>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
@@ -121,63 +96,19 @@
                 </div>
               </li>
             </ul>
-            <div class="user_option">
-              <!-- Your existing user options go here -->
-              <a href="order_online.html" class="order_online">
-                Order Online
-              </a>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
-
- <!-- Contact Form Section -->
-<section class="contact_section" style="background-color: #333; padding: 40px 0;">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-6 text-center">
-          <div class="contact_form">
-            <h2 style="color: white; margin-bottom: 30px;">Contact Us</h2>
-            <form>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="First Name" required>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Last Name" required>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email" required>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" rows="4" placeholder="Your Questions" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary" style="color: white;">Submit</button>
-            </form>
+          <div class="user_option">
+            <a href="order_online.html" class="order_online">
+              Order Online
+            </a>
           </div>
         </div>
-        <div class="col-md-6 mt-4 text-center">
-          <div>
-            <div style="height: 20px;"></div>
-            <div style="height: 20px;"></div>
-            <div style="height: 20px;"></div>
-            <div style="height: 20px;"></div>
-            <div style="height: 20px;"></div>
-            <div style="height: 20px;"></div>
-
-            <h5 style="color: white;">You can also call us at: <strong>800 GRILL FUN</strong></h5>
-            <div style="height: 20px;"></div>
-            <div style="height: 20px;"></div>
-            <div style="height: 20px;"></div>
-
-            <h5 style="color: white;">Or mail us at: <strong>Fairfield High School, 8800 Holden Blvd, Fairfield, Ohio 45014</strong></h5>
-          </div>
-        </div>
-      </div>
+      </nav>
     </div>
-  </section>
-<!-- End Contact Form Section -->
+  </header>
+    <!-- end header section -->
+  </div>
+
+  <script type="text/javascript" src="https://form.jotform.com/jsform/240337231783050"></script>
 
 
 
@@ -190,7 +121,6 @@
 
 
   <!-- footer section -->
-  
   <footer class="footer_section">
     <div class="container">
       <div class="row">
@@ -220,8 +150,9 @@
         </div>
         <div class="col-md-4 footer-col">
           <div class="footer_detail">
-            <a href="" class="footer-logo">
-              Game Day Grill
+            <a href="#" class="footer-logo">
+              <!-- Replace the placeholder below with your logo image path -->
+              <img src="images/Main_logo.png" alt="Game Day Grill Logo">
             </a>
             <p>
               
@@ -264,30 +195,26 @@
       </div>
     </div>
   </footer>
-  <!-- footer section -->
-
-  <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-  <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
-  <!-- owl slider -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <!-- isotope js -->
-  <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
-  <!-- nice select -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
-  <!-- custom js -->
-  <script src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
-
-</body>
-
-</html>
+   <!-- jQery -->
+   <script src="js/jquery-3.4.1.min.js"></script>
+   <!-- popper js -->
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+   </script>
+   <!-- bootstrap js -->
+   <script src="js/bootstrap.js"></script>
+   <!-- owl slider -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+   </script>
+   <!-- isotope js -->
+   <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+   <!-- nice select -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+   <!-- custom js -->
+   <script src="js/custom.js"></script>
+   <!-- Google Map -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
+   </script>
+   <!-- End Google Map -->
+ 
+ </body>
+ 
