the about portion

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="col-md-7 col-lg-6 ">
               <div class="detail-box">
                 <h1>
-                  Dive into Avocado Paradise!
+                 Avocado Paradise!
                </h1>
                 <p>
                   Elevate your snack game with our irresistible Guacamole! Creamy avocados, zesty lime, diced tomatoes, onions, and a pinch of cilantro create a heavenly blend of flavors. Perfect for dipping, topping, or simply enjoying on its own. Dive into the goodness of fresh, homemade guacamole – a taste of pure avocado perfection                </p>
@@ -518,63 +518,61 @@
 
   <!-- end food section -->
 
-  <!-- about section -->
+ <!-- about section -->
 
-  <section class="about_section layout_padding">
-    <div class="container  ">
+<style>
+  .about_section {
+    background: url('images/hero-bg.jpg') center/cover no-repeat;
+    /* Adjust the path to your actual image file and customize other properties as needed */
+    color: #ffffff; /* Set text color to ensure readability */
+    padding: 80px 0; /* Adjust padding as needed */
+  }
 
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/about-img.png" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                We Are Game Day Grill
-              </h2>
-            </div>
-            <p>
-              Game Day Grill is a vibrant culinary destination that embodies the perfect fusion of sports, food, and community. Located in the heart of Fairfield, this restaurant is where the thrill of game day meets exceptional dining. A true haven for sports enthusiasts, it offers a sensory delight, with big-screen TVs broadcasting live games, the jubilant cheers of fellow fans, and a menu that caters to all tastes. From mouthwatering burgers to gourmet sandwiches and fresh salads, Game Day Grill ensures that every bite is a culinary triumph. Whether you're a sports aficionado seeking the excitement of the game or a food lover in search of delectable dishes in a spirited atmosphere, Game Day Grill promises an unforgettable experience where camaraderie and cuisine unite.
+  .about_section .container {
+    z-index: 1;
+  }
 
+  .about_section .img-box {
+    position: relative;
+    z-index: 2;
+  }
+</style>
 
-            </p>
-            <a href="about.html">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
-<!-- book section -->
-<section class="book_section">
+<section class="about_section layout_padding">
   <div class="container">
-    <div class="heading_container">
-      <h2>
-        Book A Table
-      </h2>
-    </div>
-  
-        <div class="form_container">
-          <!-- Embed your JotForm code here with the appropriate width -->
-          <script type="text/javascript" src="https://form.jotform.com/jsform/240107974054050"></script>
-          <div class="btn_box">
-            <a href="menu.html">
-              <button type="button">Go to Menu</button>
-            </a>
-          </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="img-box">
+          <img src="images/about-img.png" alt="">
         </div>
       </div>
       <div class="col-md-6">
-        <!-- Map can be added here as per your requirements -->
+        <div class="detail-box">
+          <div class="heading_container">
+            <h2>We Are Game Day Grill</h2>
+          </div>
+          <p>
+            Game Day Grill is a vibrant culinary destination that embodies the perfect fusion of sports, food, and community. Located in the heart of Fairfield, this restaurant is where the thrill of game day meets exceptional dining. A true haven for sports enthusiasts, it offers a sensory delight, with big-screen TVs broadcasting live games, the jubilant cheers of fellow fans, and a menu that caters to all tastes. From mouthwatering burgers to gourmet sandwiches and fresh salads, Game Day Grill ensures that every bite is a culinary triumph. Whether you're a sports aficionado seeking the excitement of the game or a food lover in search of delectable dishes in a spirited atmosphere, Game Day Grill promises an unforgettable experience where camaraderie and cuisine unite.
+          </p>
+          <a href="about.html">Read More</a>
+        </div>
       </div>
     </div>
+  </div>
+</section>
+
+<!-- end about section -->
+
+
+<!-- book section -->
+<section>
+  <div class="form_container">
+    <!-- Embed your JotForm code here with the appropriate width -->
+    <script type="text/javascript" src="https://form.jotform.com/jsform/240107974054050"></script>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <!-- Map can be added here as per your requirements -->
   </div>
 </section>
 <!-- end book section -->
@@ -582,8 +580,14 @@
 
 
 
+
+
+
   <!-- client section -->
   <section class="client_section layout_padding-bottom">
+    <div style="height: 20px;"></div>
+    <div style="height: 20px;"></div>
+
     <div class="container">
       <div class="heading_container heading_center psudo_white_primary mb_45">
         <h2>What Our Customers Say</h2>
