--- a/menu.html
+++ b/menu.html
@@ -879,7 +879,7 @@
                           Pina Colata
                         </h5>
                         <p>
-                          A tall mixed drink of cream of coconut, pineapple juice, and ice, frapped in a blender
+                          A tall mixed drink of cream of coconut, pineapple juice, and ice 
                         </p>
                         <div class="options">
                             <h6>
