fixing a couple of menu iteams

--- a/menu.html
+++ b/menu.html
@@ -806,7 +806,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/delicious-funnel-cake-dark-background-with-empty-space-for-text-photo-transformed.jpeg" alt="">
+                  <img src="images/delicious-funnel-cake-dark-background-with-empty-space-for-text-photo-transformed (2).jpeg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
