small changes and fixes

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
   <!-- End of HubSpot Embed Code -->
 <!--for the theams page only -->
-<link rel="stylesheet" type="text/css" href="css/styleforteams.css"
-  <!-- bootstrap core css -->
+<link rel="stylesheet" type="text/css" href="css/styleforteams.css" />
+ <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!--owl slider stylesheet -->
@@ -112,7 +112,7 @@
   </header>
     <!-- end header section -->
 
-
+<!--Body section-->
 
 
 
