--- a/menu.html
+++ b/menu.html
@@ -256,7 +256,8 @@
                   Onion Rings                 
                   </h5>
                   <p>
-                    crisp lettuce, juicy tomato slices, savory pickles, and blend of melted cheese, on top of mini hamburger patties.
+
+                    sweet, thinly sliced onions, coated in a light, seasoned batter, with a satisfying crunch and a side of marinara sauce.
                   </p>
                   <div class="options">
                     <h6>
