--- a/about.html
+++ b/about.html
@@ -113,6 +113,50 @@
     <!-- end header section -->
 
 <!--Body section-->
+<!-- about section -->
+
+<style>
+  .about_section {
+    background: url('images/hero-bg.jpg') center/cover no-repeat;
+    /* Adjust the path to your actual image file and customize other properties as needed */
+    color: #ffffff; /* Set text color to ensure readability */
+    padding: 80px 0; /* Adjust padding as needed */
+  }
+
+  .about_section .container {
+    z-index: 1;
+  }
+
+  .about_section .img-box {
+    position: relative;
+    z-index: 2;
+  }
+</style>
+
+<section class="about_section layout_padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="img-box">
+          <img src="images/about-img.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="detail-box">
+          <div class="heading_container">
+            <h2>We Are Game Day Grill</h2>
+          </div>
+          <p>
+            Game Day Grill is a vibrant culinary destination that embodies the perfect fusion of sports, food, and community. Located in the heart of Fairfield, this restaurant is where the thrill of game day meets exceptional dining. A true haven for sports enthusiasts, it offers a sensory delight, with big-screen TVs broadcasting live games, the jubilant cheers of fellow fans, and a menu that caters to all tastes. From mouthwatering burgers to gourmet sandwiches and fresh salads, Game Day Grill ensures that every bite is a culinary triumph. Whether you're a sports aficionado seeking the excitement of the game or a food lover in search of delectable dishes in a spirited atmosphere, Game Day Grill promises an unforgettable experience where camaraderie and cuisine unite.
+          </p>
+          <a href="about.html">Read More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- end about section -->
 
 
 
@@ -120,10 +164,7 @@
 
 
 
-
-
-
-     <!-- footer section -->
+  <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
       <div class="row">
