--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/PrimeRib1.jpg" alt="">
+                  <img src="images/PRIMERIB123.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
