--- a/menu.html
+++ b/menu.html
@@ -455,7 +455,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Black_n_bleu_burger_500x285.png" alt="">
+                  <img src="images/BBQ-beef-Brisket123.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -503,7 +503,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/PrimeRib1_500x286.jpg" alt="">
+                  <img src="images/PRIMERIB123.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
